feat(rating form): Implemented full API for rating form

--- a/pages/ratingForm/index.html
+++ b/pages/ratingForm/index.html
@@ -227,7 +227,47 @@
     const API_URL = "https://api.jsonbin.io/v3/b/67ef5a1a8561e97a50f865f7"; // JSONBin URL
     const MASTER_KEY = "$2a$10$yfMeiHp0tq9bZ8WN1aFiI.ptHuBV22LmQrgmzxR/N0WN0cFyQTwcK"; // JSONBin Master Key
 
-   
+    // Step 1: GET existing data
+    axios.get(API_URL, {
+      headers: { "X-Master-Key": MASTER_KEY }
+    })
+    .then(response => {
+      let reviews = response.data.record; // Get current records
+
+      // Step 2: Ensure it’s an array
+      if (!Array.isArray(reviews)) {
+        reviews = []; // Reset if it’s not an array
+      }
+
+      reviews.push(formData); // Step 3: Append new review
+
+      // Step 4: SAVE (PUT) the updated array back to JSONBin
+      return axios.put(API_URL, reviews, {
+        headers: {
+          "Content-Type": "application/json",
+          "X-Master-Key": MASTER_KEY
+        }
+      });
+    })
+    .then(() => {
+      Swal.fire({
+        icon: 'success',
+        title: 'Success!',
+        text: 'Your Rating has been Submitted!',
+      });
+
+      // Clear the form
+      document.getElementById('ratingForm').reset();
+    })
+    .catch(error => {
+      Swal.fire({
+        icon: 'error',
+        title: 'Error!',
+        text: 'There was an Issue while Submitting your Ratings!',
+      });
+      console.error("Error details:", error.response ? error.response.data : error.message);
+    });
+  });
 </script>
 
         <footer class="flex justify-center p-5 darkgrey">
