--- a/pages/userList/index.html
+++ b/pages/userList/index.html
@@ -23,6 +23,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Alata&family=Inknut+Antiqua:wght@300;400;500;600;700;800;900&family=NTR&family=Roboto:ital,wght@0,100..900;1,100..900&family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alata&family=Inknut+Antiqua:wght@300;400;500;600;700;800;900&family=NTR&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@300;400;500;600;700;800;900&family=NTR&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/pages/contactPage/assets/css/sweetalert2.min.css">
+    <script src="/pages/contactPage/assets/js/sweetalert2.all.min.js"></script>
+    <link rel="stylesheet" href="/pages/contactPage/assets/css/sweet-alert-2.css">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+    <!-- Include Bootstrap 5 CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<!-- Include DataTables CSS -->
+<link href="https://cdn.jsdelivr.net/npm/datatables.net-bs5@2.0.0/css/dataTables.bootstrap5.min.css" rel="stylesheet">
+
+<!-- Include jQuery (required by DataTables) -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<!-- Include DataTables JS -->
+<script src="https://cdn.jsdelivr.net/npm/datatables.net@1.11.5/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/datatables.net-bs5@2.0.0/js/dataTables.bootstrap5.min.js"></script>
+
+<!-- Optional: Include Bootstrap 5 JS for full functionality -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </head>
 
 <body class="Inknut">
@@ -36,7 +57,7 @@
                     <img src="assets/img/facebook 3.svg" alt="" class="" id="facebook">
                 </a>
                 <a href="" target="_blank">
-                    <img src="assets/img/twitter 3.svg"" class="" id="twitter">
+                    <img src="assets/img/twitter 3.svg" class="" id="twitter">
                 </a>
                 <a href="https://www.tiktok.com/@ragingbolts?fbclid=IwZXh0bgNhZW0CMTEAAR2FpvK0xK_Pn9_uq40N_egdFv7jQ_ap_dCZ8nZBuoi5WfnvI01SAMNHtc0_aem_u4r5lDqYC6qUP51_4WuMag" target="_blank">
                     <img src="assets/img/tik-tok (1) 3.svg" alt="" class="" id="tiktok">
@@ -67,7 +88,7 @@
                     <img src="assets/img/user 3.svg" alt="">
                 </a>
                 <a href="">
-                    <h3 class="hover:bg-gray-300 transition-colors">Admin</h3>
+                    <h3 class="hover:bg-gray-300 transition-colors">Login</h3>
                 </a>  
                
             </adminCustomerCTA>
@@ -147,17 +168,27 @@
       <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     </head>
     <body>
-      <div class="flex justify-between xl:m-20 max-w-[100%] min-h-screen lg:max-w-[100%] shadow-2xl Inknut">
-       <div class="flex justify-between p-3">
-        <div class="bg-white mx-5">
-          <h2>1. emailsample@gmail.com</h2>
-        </div>
-        <div class="mx-5">
-          <h2>Joined: 01/04/2025</h2>
-        </div>
-       </div>
-      </div>
+    <div class="container my-4">
+    <table id="userTable" class="table table-striped table-bordered">
+        <thead class="thead-dark">
+        <tr>
+            <th>Email</th>
+            <th>Join Date</th>
+        </tr>
+        </thead>
+        <tbody id="userList">
+        <!-- User data will be inserted here -->
+        </tbody>
+    </table>
+    </div>
+
+<script>
+  async function fetchUsers() {
+    const API_URL = "https://api.jsonbin.io/v3/b/67ef59a08561e97a50f865ae"; // Your bin URL
+    const MASTER_KEY = "$2a$10$yfMeiHp0tq9bZ8WN1aFiI.ptHuBV22LmQrgmzxR/N0WN0cFyQTwcK"; // Your JSONBin Master Key
+
     
+</script>
   
 </main>
     <footer class="flex justify-center p-5 darkgrey">
