fix(user list): upper bar nav padding

--- a/pages/userList/index.html
+++ b/pages/userList/index.html
@@ -65,7 +65,7 @@
             </socmedLogo>
         </socmedContainer>  
 
-        <upperBarnav class="flex items-center p-4 lg:p-0 justify-between">
+        <upperBarnav class="flex items-center  lg:p-0 justify-between">
             
             <socmedLogo class="hidden lg:flex lg:space-x-6 lg:p-5 lightblue">
                 <a href="https://www.instagram.com/ragingboltsz/?fbclid=IwZXh0bgNhZW0CMTEAAR0LkZafdf6xwhAUjk8dX6t4PnkdA9SnnDVFybZFnF8UdUCTWjIqOg5q-VY_aem_pK1T6md4iD15dXcF0T2zYw" target="_blank">
