--- a/pages/loginPage/index.html
+++ b/pages/loginPage/index.html
@@ -33,7 +33,7 @@
 <body class="Inknut">
     <header class="" >
        <socmedContainer class="flex justify-center items-center p-3.5 lg:hidden lightblue">
-            <socmedLogo class="flex space-x-6 lg:space-x-12">
+            <socmedLogo class="flex space-x-6 lg:space-x-12 lg:hidden">
                 <a href="https://www.instagram.com/ragingboltsz/?fbclid=IwZXh0bgNhZW0CMTEAAR0LkZafdf6xwhAUjk8dX6t4PnkdA9SnnDVFybZFnF8UdUCTWjIqOg5q-VY_aem_pK1T6md4iD15dXcF0T2zYw" target="_blank">
                     <img src="assets/img/instagram 3.svg" alt="" class="" id="instagram">
                 </a>
