--- a/pages/userList/index.html
+++ b/pages/userList/index.html
@@ -83,14 +83,11 @@
             </socmedLogo>
 
 
-            <adminCustomerCTA class="flex space-x-4 pr-5">
-                <a href="">
-                    <img src="assets/img/user 3.svg" alt="">
-                </a>
-                <a href="">
-                    <h3 class="hover:bg-gray-300 transition-colors">Login</h3>
-                </a>  
-               
+            <adminCustomerCTA class="flex-end justify- space-x-4 pr-5 p-3">
+                        <a href="\pages\loginPage\index.html">
+                        <img src="assets/img/user 3.svg" alt="">
+                    </a>
+                
             </adminCustomerCTA>
 
 
