--- a/pages/submissions/index.html
+++ b/pages/submissions/index.html
@@ -65,12 +65,10 @@
 
 
             <adminCustomerCTA class="flex space-x-4 pr-5">
-                <a href="">
+                <a href="\pages\loginPage\index.html">
                     <img src="assets/img/user 3.svg" alt="">
                 </a>
-                <a href="">
-                    <h3 class="hover:bg-gray-300 transition-colors">Login</h3>
-                </a>  
+               
                
             </adminCustomerCTA>
 
