--- a/index.html
+++ b/index.html
@@ -71,16 +71,15 @@
 
 
             <nav class="flex justify-between items-center lg:hidden">
-                <div class="nav-links duration-500 lg:static absolute bg-white lg:min-h-fit min-h-[40vh] left-0 top-[-100%] lg:w-auto w-full flex items-center shadow-md px-5">
-                    <ul class="flex lg:flex-row flex-col md:items-center lg:gap-[4vw] gap-8" id="navCTA";">
-                        <li><a href="#"        class="no-underline rounded-xl m-7 p-3 m hover:bg-gray-300 transition-colors">HOME</a></li>
-                        <li><a href="pages\aboutUs\index.html" class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">ABOUT</a></li>
-                        <li><a href="pages\schoolPage\index.html" class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">SCHOOLS</a></li>
-                        <li><a href="pages\submitReview\index.html" class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">SUBMIT</a></li>
-                        <li><a href="pages\contactPage\index.html" class="no-underline rounded-xl m-7 p-3 hover:bg-gray-300 transition-colors">CONTACT</a></li>
+                <div>
+                    <ul class="flex lg:flex-row flex-col md:items-center lg:gap-[4vw] gap-8" id="navCTA">
+                        <li><a href="#"        class="no-underline rounded-xl m-7 p-1 hover:bg-gray-300 transition-colors">HOME</a></li>
+                        <li><a href="pages\aboutUs\index.html"           class="no-underline rounded-xl m-7 p-1 hover:bg-gray-300 transition-colors">ABOUT</a></li>
+                        <li><a href="pages\schoolPageClient\index.html" class="no-underline rounded-xl m-7 p-1 hover:bg-gray-300 transition-colors">SCHOOLS</a></li>
+                        <li><a href="pages\submitReview\index.html"    class="no-underline rounded-xl m-7 p-1 hover:bg-gray-300 transition-colors">SUBMIT</a></li>
+                        <li><a href="pages\contactPage\index.html"     class="no-underline rounded-xl m-7 p-1 hover:bg-gray-300 transition-colors">CONTACT</a></li>
                     </ul>
                 </div>
-               
             </nav>
 
          
@@ -118,7 +117,7 @@
         <ul class="flex ">
             <li><a href="#"                          class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[19px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-sm">HOME</a></li>
             <li><a href="pages\aboutUs\index.html"    class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[19px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-sm">ABOUT</a></li>
-            <li><a href="pages\schoolPage\index.html"     class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[19px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-sm">SCHOOLS</a></li>
+            <li><a href="pages\schoolPageClient\index.html"     class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[19px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-sm">SCHOOLS</a></li>
             <li><a href="pages\submitReview\index.html"  class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[19px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-sm">SUBMIT</a></li>
             <li><a href="pages\contactPage\index.html" class="p-[16.5px] lg:py-[19px] lg:p-[15.5px] xl:p-[35px] xl:py-[19px] hover:bg-gray-300 active:bg-gray-400 transition-colors text-sm">CONTACT</a></li>
         </ul> 
